[project]
name = "ix-pu-utils"
version = "0.1.0"
description = "Random stuff to help writing Pulumi scripts easier"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12.0"
dependencies = ["pulumi", "uv"]

authors = [
    { name = "injuryex", email = "injuryex@ptnglobalcorp.com" },
]

[project.optional-dependencies]
dev = ["pyright", "ruff", "ward", "twine", "build"]
aws = ["pulumi-aws"]

[project.urls]
"Source" = "https://github.com/ptnglobalcorp/pu-utils"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
