[project]
name = "plm-utils"
version = "0.1.0"
description = "Random stuff to help writing Pulumi scripts easier"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12.0"
dependencies = ["pulumi", "uv"]

authors = [
    { name = "PTNGlobal", email = "support@ptnglobalcorp.com" },
]

[project.optional-dependencies]
dev = ["pyright", "ruff", "ward", "twine", "build"]
aws = ["pulumi-aws"]

[project.urls]
"Source" = "https://github.com/ptnglobalcorp/pulumi-utils"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
